kubernetes/apps/downloads/prowlarr/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  annotations:
    external-dns/is-public: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    hajimari.io/enable: "true"
    hajimari.io/appName: "Prowlarr"
    hajimari.io/group: "downloads"
    hajimari.io/icon: mdi:cogs
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-chain-internal-default-noauth@kubernetescrd"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "prowlarr.${SECRET_DOMAIN}"
      secretName: "prowlarr.${SECRET_DOMAIN//./-}-prod-tls"
  rules:
    - host: prowlarr.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 8080
